enum FeatureType {
  uint8 = 1;
  uint16 = 2;
  uint32 = 3;
  uint64 = 4;
  int8 = 5;
  int16 = 6;
  int32 = 7;
  int64 = 8;
  sint8 = 9;
  sint16 = 10;
  sint32 = 11;
  sint64 = 12;
  fixedint8 = 13;
  fixedint16 = 14;
  fixedint32 = 15;
  fixedint64 = 16;
  sfixedint8 = 17;
  sfixedint16 = 18;
  sfixedint32 = 19;
  sfixedint64 = 20;
  string = 21 [(length) = 0];
  bytes = 22 [(length) = 0];
  bool = 23;
  float = 24;
  double = 25;
}
